cabal-version:      3.4
name:               haskell-topics
version:            0.1.0.0

synopsis: learning some haskell topics

author:             Andrey Demidenko
maintainer:         worm2fed@gmail.com

executable haskell-topics
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.14.1.0
  hs-source-dirs:   app
  default-language: Haskell2010

library
  exposed-modules:
    TypeFamilies
  hs-source-dirs:
    src
  build-depends:
      base
    , bytestring
